crates/uitest/fixtures/mir_check/match_pattern_owned_local_use_after_move.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/match_pattern_owned_local_use_after_move.fe
---
error[10-0002]: move conflict in `fn match_pattern_owned_local_use_after_move`
   ┌─ match_pattern_owned_local_use_after_move.fe:10:5
   │
 7 │     let y = match foo {
   │                   --- `foo` is moved here
   ·
10 │     foo.x + y
   │     ^^^^^^^^^ cannot use a value after it was moved
